# ATLAS-Autonomous-Compliance-Intelligence-Platform

backend/: pyproject.toml
