[project]
name = "backend"
version = "0.1.0"
description = "Backend for ATLAS agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.18.0",
    "beautifulsoup4==4.12.3",
    "chromadb==0.5.11",
    "faiss-cpu==1.13.2",
    "fastapi==0.115.0",
    "httpx>=0.27.0",
    "openai==1.12.0",
    "pydantic==2.8.0",
    "pypdf2==3.0.1",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.6",
    "requests>=2.31.0",
    "sentence-transformers==2.3.1",
    "uvicorn[standard]==0.30.0",
]
